[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/MagisterWu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ChatBoxAnim.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Sprites/Environment/ShadowForAll.png" type="Texture" id=3]
[ext_resource path="res://sounds/huhgeneric.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/huhgeneric2.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sprites/Wagons/WagonFrames.tres" type="SpriteFrames" id=6]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 8.25 )

[sub_resource type="Animation" id=13]
length = 0.001

[sub_resource type="Animation" id=16]
resource_name = "chatsheet"

[sub_resource type="Animation" id=14]
resource_name = "generictext"

[sub_resource type="Animation" id=11]
resource_name = "textbox"

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 43.5, 27.25 )

[sub_resource type="Animation" id=17]
resource_name = "chatbox"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[node name="OldDaiLi" type="KinematicBody2D"]
position = Vector2( -1162, -792 )
z_index = 2
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 6 )
animation = "closed"
playing = true

[node name="Shadow" type="Sprite" parent="Sprite"]
position = Vector2( 0, -1 )
z_index = 1
z_as_relative = false
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 21 )
shape = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
anims/chatsheet = SubResource( 16 )
anims/generictext = SubResource( 14 )
anims/textbox = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 2.5, 25.75 )
shape = SubResource( 15 )

[node name="SpeakOut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -0.001
pitch_scale = 1.69

[node name="SpeakOut2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -0.001
pitch_scale = 1.37

[node name="Expressions" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 10, -20 )
frames = ExtResource( 2 )
animation = "chatbox"
playing = true

[node name="ChatPlayer" type="AnimationPlayer" parent="Expressions"]
anims/chatbox = SubResource( 17 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
